// Copyright (c) 2015, Google Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package messagepb;

service StickyNote {
  rpc Get(StickyNoteRequest) returns (StickyNoteResponse) {}
  rpc Update(stream StickyNoteRequest) returns (stream StickyNoteResponse) {}
  rpc SayHello(SayHelloRequest) returns (SayHelloResponse) {}
  rpc StreamHello(stream SayHelloRequest) returns (stream SayHelloResponse) {}
}

message StickyNoteRequest {
  string message = 1;
  int32 size = 2;
}

message StickyNoteResponse {
  bytes image = 1;
}

message SayHelloRequest {
  string message = 1;
}

message SayHelloResponse {
  string message = 1;
}